# Cpp

./: .gitignore  main.tex
Multithreading/code/: Multithreading.cpp
Optimization/: Optimization.tex
Optimization/code/: CMakeLists.txt  loopUnrolling.cpp  loopUnrolling.h  main.cpp  memoryAlignment.cpp  new8.cpp
Optimization/code/Buils/: CMakeCache.txt  Makefile  cmake_install.cmake  loop_unrolling_example
chap1/: chap1.tex
chap1/code/: firstProgram.cpp  firstProgram.vcxproj
chap2/: chap2.tex
chap2/code/: main.c  math_operations.c  math_operations.h  run.bat
compilers/: compilers.tex
python/: python.tex
virtualFunctions/code/: notvirt.cpp
virtualFunctions/codeV2/: CMakeLists.txt  notvirt.cpp
virtualFunctions/englishDist/: CMakeLists.txt  nofri.cpp
virtualFunctions/englishDist/friend/: CMakeLists.txt  frengl.cpp
virtualFunctions/graphics/: CMakeLists.txt  msoftcon.cpp  virtshap.cpp
virtualFunctions/statfunc/: CMakeLists.txt  statfunc.cpp
virtualFunctions/virtpers/: CMakeLists.txt  virtpers.cpp
virtualFunctions/virtpure/: CMakeLists.txt  virtpure.cpp
